<resources>
    <string name="app_name">Kusele</string>
    <string name="Sign_Up">Commencez a decouvrir les Offres</string>
    <string name="Sign_In">Sign In</string>
    <string name="OR">ou</string>
    <string name="EmailHint">Email</string>
    <string name="PasswordHint">mot de passe</string>
    <string name="title_activity_main">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Logout">Deconnection</string>
    <string name="NomHint">Nom</string>
    <string name="PrenomHint">Prenom</string>
    <string name="ConfPasswordHint">Confirmation de mot de passe</string>
    <string name="Sinscrire">S\'inscrire</string>
    <string name="facebook_app_id">159320468213882</string>
    <string name="fb_login_protocol_scheme">fb159320468213882</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_sign_in_up">SignInUP</string>
    <string name="forgetpassword">mot de passe oublie ?</string>
    <string name="connecter">Se Connecter</string>
    <string name="swipe">Gliser pour s\'inscrire</string>
    <string name="Inscript">Inscription</string>
    <string name="Ajouter">Ajouter</string>
    <string name="AmI">Je suis ... ?</string>
</resources>
