<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUPActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/kusele"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EmailHint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/textNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NomHint"
            android:inputType="text" />

        <EditText
            android:id="@+id/textPrenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PrenomHint"
            android:inputType="text" />

        <EditText
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PasswordHint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/Sinscrire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sinscrire" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>