<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/kusele"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        >

        <EditText
            android:id="@+id/EmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EmailHint" />

        <EditText
            android:id="@+id/PasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PasswordHint" />

        <Button
            android:id="@+id/SignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:text="@string/Sign_In" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/SignIn_Google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Sign_Up"
            android:textColor="@android:color/black" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>